--- a/views/user/whishlist.ejs
+++ b/views/user/whishlist.ejs
@@ -135,9 +135,11 @@
                             </table>
                         </div>
                         <% } else { %>
-                            <h4>Your wishlist is empty.</h4>
+                            <div class="text-center" style="margin: 50px;">
+                                <h4>Your wishlist is empty.</h4>
+                            </div>
                             <% } %>
-                                <div id="emptyWishList" style="display: none" class="text-center">
+                                <div id="emptyWishList" style="display: none; padding: 50px;" class="text-center" >
                                     <h4>Your wishlist is empty.</h4>
                                 </div>
                 </div>
