--- a/views/user/layouts/footerNavbar.ejs
+++ b/views/user/layouts/footerNavbar.ejs
@@ -1,4 +1,6 @@
  <!-- Footer Section Begin -->
+</div>
+
  <footer class="footer">
     <div class="container">
         <div class="row">
@@ -76,3 +78,5 @@
     </div>
 </div>
 <!-- Search End -->
+
+  </div>
