--- a/views/user/layouts/navbar.ejs
+++ b/views/user/layouts/navbar.ejs
@@ -25,8 +25,8 @@
                 <div class="col-lg-3 col-md-3">
                     <div class="header__nav__option">
                         <a href="#" class="search-switch"><img src="/user/img/icon/search.png" alt=""></a>
-                        <a href="/loadWhishlist"><img src="/user/img/icon/heart.png" alt=""></a>
-                        <a href="/loadCart"><img src="/user/img/icon/cart.png" alt=""> <span></span></a>
+                        <a href="/loadWhishlist"><img src="/user/img/icon/heart.png" alt="" class="whishlistButton"></a>
+                        <a href="/loadCart"><img src="/user/img/icon/cart.png" alt="" class="cartButton"> <span></span></a>
                         <!-- <a href="/wallet" class="price">₹0.00</a> -->
                     </div>
                 </div>
